@@ -1,5 +1,7 @@
 Release 1.14 - ???
 
+  * Add mime definition and parser for MS Owner File (TIKA-2008).
+
   * Add mime definition for Windows Media Metafile (TIKA-2004).
 
   * Add mime definitions of iCal and vCalendar (TIKA-2006).
